// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rux-classification-marking renders component with no properties set 1`] = `
<rux-classification-marking classification="unclassified">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      unclassified
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders confidential banner 1`] = `
<rux-classification-marking classification="confidential">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      confidential
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders controlled banner 1`] = `
<rux-classification-marking classification="controlled">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      controlled
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders cui banner 1`] = `
<rux-classification-marking classification="cui">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      cui
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders secret banner 1`] = `
<rux-classification-marking classification="secret">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      secret
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders tincorrect option banner 1`] = `
<rux-classification-marking classification="notapprovedoption">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      unclassified
    </div>
  <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders top secret banner 1`] = `
<rux-classification-marking classification="top-secret">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      top secret
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders top secret sci banner 1`] = `
<rux-classification-marking classification="top-secret-sci">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      top secret//sci
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking banners renders unclassified banner 1`] = `
<rux-classification-marking classification="unclassified">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      unclassified
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking label renders footer banner 1`] = `
<rux-classification-marking classification="secret">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      secret
    </div>
    <slot></slot>
  </mock:shadow-root>
  <h1>
    Test title for footer banner
  </h1>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking label renders unclassified banner label 1`] = `
<rux-classification-marking classification="unclassified" label="-hello world-">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--banner" part="tag header">
      unclassified-hello world-
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking label renders unclassified tag label 1`] = `
<rux-classification-marking classification="unclassified" label="-hello world-" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      u-hello world-
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders confidential tag 1`] = `
<rux-classification-marking classification="confidential" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      c
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders controlled tag 1`] = `
<rux-classification-marking classification="controlled" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      cui
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders incorrect option tag 1`] = `
<rux-classification-marking classification="notapprovedoption" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      u
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders secret tag 1`] = `
<rux-classification-marking classification="secret" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      s
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders top secret sci tag 1`] = `
<rux-classification-marking classification="top-secret-sci" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      TS//SCI
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders top secret tag 1`] = `
<rux-classification-marking classification="top-secret" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      ts
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;

exports[`rux-classification-marking rux-classification-marking tags renders unclassified tag 1`] = `
<rux-classification-marking classification="unclassified" tag="">
  <mock:shadow-root>
    <div class="rux-classification rux-classification--tag" part="tag header">
      u
    </div>
    <slot></slot>
  </mock:shadow-root>
</rux-classification-marking>
`;
